# Articul8Python

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.for.serial  Makefile  analyse.py  analysis_tools.py  articul8_comm.py  articul8_logs.py  articulate_comm_test.py  articulate_stream_data.py  batterytest.py  circular_buffer.h  cpp_demo.py  demo.py  example.py  fake_tcp.py  logger.h  lra_helper.py  main.cpp  movement.py  msg_defs.h  msg_defs.py  orientationtest.py  periodic.h  quaternion.py  quickqueue.h  sendcommands.py  serialman.h  tcpdemo.py  threadman.py  workers.py  wrapper.cpp  wrapper.h
wrapper/: helper_3dmath.h  leg_state.h  logger.cpp  logger.h  lra_packet_gen.h  msg_defs.h  quickqueue.h  recording_man.h  serialman.h  wrapper.cpp  wrapper.h
wrapper/tests/: logtest.cpp
